[tool.poetry]
name = "fru"
version = "4.0.2"
description = "Read and write binary FRU files"
authors = [
    "Kurt McKee <contactme@kurtmckee.org>",
    "Ganesh Viswanathan <dev@genotrance.com>",
]
license = "MIT"
readme = "README.rst"
include = [
    "CHANGELOG.rst",
]
repository = "https://github.com/kurtmckee/fru-tool/"
keywords = ["fru", "ipmi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.0.0"
tomli = { version = "^2.0.1", python = "<3.11" }


[tool.poetry.scripts]
frutool = 'fru.console:run'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# coverage
# --------

[tool.coverage.run]
branch = true
parallel = true
source = [
    "fru",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
fail_under = 82


# mypy
# ----
#
#[tool.mypy]
#packages = "src.fru"
#strict = true
#sqlite_cache = true


# isort
# -----

[tool.isort]
profile = "black"


# pytest
# ------
[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Documentation",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
